# memo-hub

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI_INSTALL.md  CONTRIBUTING.md  DELIVERY_CHECKLIST.md  DEPLOYMENT_GUIDE.md  LICENSE  MEMO_FIX_REPORT.md  NPM_INSTALL.md  OVERVIEW.md  PUBLISHING_CHECKLIST.md  README.md  README_CN.md  TEST.md  VERIFY_NOW.sh  body.html  custom-config.jsonc  docker-compose.web.yml  eslint.config.js  install-cli.sh  install.sh  memory.sh  package.json  probe_ui.js  test-lru.ts  test_browser.js  tsconfig.base.json  tsconfig.json  typedoc.json
.deprecated/: CLEANUP_PLAN.md
config/: config.example.jsonc  config.example.yaml
connectors/hermes/: .gitignore  README.md  pyproject.toml
connectors/hermes/memohub_provider/: __init__.py  cli.py  client.py  config.py  extractor.py  plugin.yaml  provider.py
connectors/hermes/plugins/: __init__.py
connectors/hermes/plugins/memory/: __init__.py
connectors/hermes/plugins/memory/memohub/: __init__.py  cli.py  extractor.py  provider.py
connectors/hermes/test/: test_contract.py  test_memory_loop.py
docs/: ARCHITECTURE_UPDATE_SUMMARY.md  CHANGELOG.md  CNAME  DEVELOPMENT.md  FINAL_SUMMARY.md  INTEGRATION_UPDATE_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  _sidebar.md  api.md  faq.md  hermes-integration.md  index.html
guides/: configuration.md  quickstart.md
mcp-server/: README.md  index.ts  package.json  tsconfig.json
rulers/: code.md  react-components.md
scripts/: analyze-clawmem.ts  auto-extract-memory.sh  backup-memory.sh  benchmark.ts  build.ts  cleanup-skills.ts  (+10 more)
(+987 files in other folders)
