[project]
name = "memohub-hermes-connector"
version = "1.0.0"
description = "MemoHub Hermes memory provider connector"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plugins"]

[tool.hatch.build.targets.sdist]
include = [
  "plugins",
  "test",
  "README.md",
]

[project.scripts]
memohub-provider-debug = "plugins.memory.memohub.cli:main"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = [".", "plugins/memory"]

[tool.ruff]
line-length = 100
target-version = "py39"
